--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Desafio3DHA</string>
+    <string name="welcome">Welcome to the Marvel HQ\'s</string>
+    <string name="log_in">LOG IN</string>
+    <string name="password">Password</string>
+    <string name="remember">Remember</string>
+    <string name="create_account">Create account</string>
+    <string name="e_mail">E-mail</string>
 </resources>
