--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="remember">Remember</string>
     <string name="create_account">Create account</string>
     <string name="e_mail">E-mail</string>
+    <string name="save">SAVE</string>
+    <string name="name">Name</string>
 </resources>
