--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,14 @@
     <string name="e_mail">E-mail</string>
     <string name="save">SAVE</string>
     <string name="name">Name</string>
+
+    <string name="sinopse">The greatest superhero of all time RETURNS! The world may have changed
+        since Spidey\'s been gone, but so has Peter Parker. This is a man with a second chance at
+        life, and he\'s not wasting a moment of it. Same Parker Luck, new Parker attitude.
+        Putting the \"friendly\" back in the neighborhood, the \"hero\" back into \"super hero,\" and
+        the \"amazing\" back into "Spider-Man! Also returning The recharged and reenergized ELECTRO!</string>
+    <string name="pages">Pages:</string>
+    <string name="pages">Pages:</string>
+    <string name="price">Price:</string>
+    <string name="published">Published:</string>
 </resources>
